添加Janus库，并能初始化成功

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "exports-loader": "^1.1.1",
+    "janus-gateway": "git://github.com/meetecho/janus-gateway.git",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
